--- a/public/contact.html
+++ b/public/contact.html
@@ -41,7 +41,7 @@
                 justify-content: center;
                 height: 75vh;
                 width: 100%;
-                background: url(./h_main.jpg) no-repeat center center;
+                background: url(./shp.jpg) no-repeat center center;
                 background-size: cover;
             }
             .form_class {
