--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
                 margin: 0px;
             }
             body {
-                background-color: lightgreen;
+                background-color: rgb(237, 203, 111);
             }
             header {
-                background-color: black;
+                background-color: rgb(223, 123, 123);
                 color: white;
                 display: flex;
                 align-items: center;
@@ -68,16 +68,16 @@
 
 <body>
     <header>
-        <h1>Welcome To Home Page</h1>
+        <h1>Welcome To Our Desk</h1>
 
 
 
     </header>
     <header>
         <p>
-        <a href="./About.html">About</a>
-        <a href="./Contact.html">Contact</a>
-        <a href="./Login.html">Login</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./login.html">Login</a>
         </p>
     </header>
     <main>
