--- a/public/login.html
+++ b/public/login.html
@@ -7,10 +7,10 @@
                 margin: 0px;
             }
             body {
-                background-color: lightgreen;
+                background-color: rgb(237, 224, 111);
             }
             header {
-                background-color: black;
+                background-color: rgb(214, 137, 137);
                 color: white;
                 display: flex;
                 align-items: center;
@@ -30,7 +30,7 @@
                 justify-content: center;
                 height: 75vh;
                 width: 100%;
-                background: url(./UMdownload.jpg) no-repeat center center;
+                background: url(./shp.jpg) no-repeat center center;
                 background-size: cover;
             }
             .form_class {
@@ -97,7 +97,7 @@
             function validateLogin(){
                 let logid=document.getElementById("log").value
                 let pass=document.getElementById("pass").value
-                if(logid=="Akshay"&&pass=="Kapse"){
+                if(logid=="Akshay"&&pass=="12345"){
                     alert("verified")
                 }
                 else{
